# analog_image_generator

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  cursor.plan.md  pyproject.toml  release-please-config.json  requirements-dev.txt
.cursor/: mcp.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.taskmaster/: config.json  state.json
analog_wheels/: black-25.11.0-cp311-cp311-manylinux2014_x86_64.manylinux_2_17_x86_64.manylinux_2_28_x86_64.whl  nbstripout-0.8.1-py2.py3-none-any.whl  pre_commit-4.4.0-py2.py3-none-any.whl
docs/: CHAT_SCRIPTS.md  CODEX_RUNBOOK.md  CURSOR_SETUP.md  FLUVIAL_DEMO_NOTEBOOK_PLAN.md  GEOLOGIC_RULES.md  MEETING_RECAP_2025-11-12.md  MEETING_RECAP_2025-11-20.md  MEETING_RECAP_TEMPLATE.md  ONBOARDING.md  PALETTES.md  TASKMASTER_TASKS_EXPORT.md  TASKMASTER_WSL_SETUP.md  WORKFLOW.md  aeolian_tasks.txt  estuarine_tasks.txt  fluvial_tasks.txt
notebooks/: reporting.ipynb  (+8 more)
templates/project-template/: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  cursor.plan.md  pyproject.toml  requirements-dev.txt  requirements.txt
templates/project-template/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
templates/project-template/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
templates/project-template/.github/workflows/: ci.yml  release-please.yml
templates/project-template/.taskmaster/docs/: prd_primary.txt  prd_secondary.txt  prd_tertiary.txt
templates/project-template/docs/: CHAT_SCRIPTS.md  CURSOR_SETUP.md  GEOLOGIC_RULES.md  MEETING_RECAP_TEMPLATE.md  ONBOARDING.md  PALETTES.md  PRD_TEMPLATE.md  TASKMASTER_WSL_SETUP.md  WORKFLOW.md
templates/project-template/research-documents/: README.md
templates/project-template/scripts/: smoke_test.py
(+66 files in other folders)
