[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "analog-image-generator"
version = "0.1.0"
description = "Rule-driven analog image generators with interactive exploration, statistics, and reporting."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "cjh5690" }]
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "pandas",
  "ipywidgets",
  "reportlab",
  "PyPDF2",
]

[project.optional-dependencies]
dev = [
  "black",
  "isort",
  "ruff",
  "pre-commit",
  "pytest",
  "nbstripout",
]

[project.urls]
Homepage = "https://github.com/cjh5690/analog_image_generator"
Issues = "https://github.com/cjh5690/analog_image_generator/issues"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = []

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = [
  "tests",
]
